# grass-rendering

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
assets/: floor.glb  grass.blend  grass.blend1  grass.glb  grass_LOD.blend  grass_LOD.glb
assets/shaders/: compile_shaders.sh  grass.frag  grass.frag.spv  grass.vert  grass.vert.spv  populate_grass_buffer.comp  populate_grass_buffer.comp.spv
src/: camera_controller.cpp  camera_controller.h  game.cpp  game.h  grass.cpp  grass.h  main.cpp  pch.h
